fix jdk 24 bugs