@@ -61,10 +61,8 @@ allprojects {
     test {
         systemProperties("spring.cloud.compatibility-verifier.enabled": "false")
         useJUnitPlatform()
-        dependencies {
-            // https://docs.gradle.org/current/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
-            testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-        }
+
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
     }
 
     afterEvaluate {
@@ -89,6 +87,8 @@ allprojects {
         testCompileOnly("org.projectlombok:lombok")
         testAnnotationProcessor("org.projectlombok:lombok")
         compileOnly("com.github.spotbugs:spotbugs-annotations:${spotbugsAnnotationsVersion}")
+        // https://docs.gradle.org/current/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
+        testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     }
 
     // spotless
